feat: add Angular Material and Tailwind CSS setup with initial app structure

--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/cdk": "^20.1.4",
     "@angular/common": "~20.1.0",
     "@angular/compiler": "~20.1.0",
     "@angular/core": "~20.1.0",
     "@angular/forms": "~20.1.0",
+    "@angular/material": "^20.1.4",
     "@angular/platform-browser": "~20.1.0",
     "@angular/router": "~20.1.0",
     "rxjs": "~7.8.0",
@@ -38,10 +40,13 @@
     "@swc/helpers": "~0.5.11",
     "@typescript-eslint/utils": "^8.29.0",
     "angular-eslint": "^20.0.0",
+    "autoprefixer": "^10.4.0",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^10.0.0",
     "nx": "21.3.11",
+    "postcss": "^8.4.5",
     "prettier": "^2.6.2",
+    "tailwindcss": "^3.0.2",
     "tslib": "^2.3.0",
     "typescript": "~5.8.2",
     "typescript-eslint": "^8.29.0"
