--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/material": "^20.1.4",
     "@angular/platform-browser": "~20.1.0",
     "@angular/router": "~20.1.0",
+    "@vercel/analytics": "^1.5.0",
     "rxjs": "~7.8.0",
     "zone.js": "~0.15.0"
   },
